<resources>
    <string name="app_name" translatable="false">4You</string>
    <string name="login" translatable="false">Login</string>
    <string name="login_with_google">Sign In With Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="message" translatable="false">Login</string>
    <string name="message1" translatable="false">Sign Up</string>
    <string name="message0" translatable="false">Login With Google</string>
    <string name="logo">Logo</string>
    <string name="Password"><i>Password</i></string>
    <string name="Email_ID"><i>Email ID</i></string>
    <string name="login_activity_label">Login</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="incorrect_email_id">Incorrect Email ID</string>
    <string name="default_web_client_id">992940108080-fftcvl14eitvnv2cadrrs9piigstp8g1.apps.googleusercontent.com</string>
    <string name="sign_in_successful">Sign In Successful</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
</resources>